styling and layout of lodging page

--- a/src/i18n/translations/en.yml
+++ b/src/i18n/translations/en.yml
@@ -12,7 +12,7 @@ footer.title: 'Built by Cameron Avelis and Lillian Nguyen'
 
 page1.title: "Lodging"
 lodging1.header: "Hotel Revival"
-lodging1.description: "Hotel Revival is a hip hotel in a part of town that we really love. Hotel Revival has a great tiki bar in the Garden Room on the top floor, with views of the entire city."
+lodging1.description: "Hotel Revival is a hip hotel in a part of town that we really love. Topside is the Hotel's bar and restaurant on the top floor, with views of the entire city."
 lodging1.price: "$189 per night plus tax for the King Deluxe room, with one king bed"
 lodging1.location: "Mount Vernon, our favorite neighborhood for going out. There's lots of great bars and restaurants, and beautiful architecture. Very close to the starting point of Bike Party, and also right along the Maryland Ave protected bike path. Two miles from the wedding location."
 lodging1.who: "If you like going out for good food and drink, or just walking around a historic neighborhood."
